we are trying to add new feature

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <img src="images/logo.png" alt="Café Git Logo">
-        <h1>Welcome to Café Git!</h1>
-        <p>Your favorite local coffee shop.</p>
+        <h1>Welcome to Resturant </h1>
+        <p>We serve fresh food here.</p>
     </header>
     <main>
         <section id="about">
